# my-openenv

./: .dockerignore  .env.example  Dockerfile  README.md  TASK_HARD_WALKTHROUGH.md  app.py  baseline_results.txt  executor.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
tests/: test_executor.py
