[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-openenv"
version = "1.0.0"
description = "OpenEnv environment for data pipeline repair"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "requests==2.31.0",
    "openai==1.30.1",
    "python-dotenv==1.0.1"
]
