[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-openenv"
version = "1.0.0"
description = "OpenEnv environment for data pipeline repair"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.30.0",
    "openai",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
